- Fixed: Swipe items wasn't possible after going back to shopping list or stock
- Fixed: Due date was always mandatory on inventory page (#400)
- Fixed: White icons on white navigation bar with SDK 21-25 (#366)
- Fixed: Plurals in languages with multiple plurals are displayed correctly (#348)
- Fixed: Show opened aggregated amount in stock overview if necessary

2.0.0-alpha07
- New: Transfer page and inventory page (finally!) (#385 and #115)
- New: We use Conscrypt now to support TLS1.3 on older Android versions (#163)
- New: You can now duplicate products (#146)
- Improved: List sorting uses rules of currently selected language (#371)
- Improved: You can now open purchase or consume page from stock for one product
- Improved: Long-tap on shopping list card on start page to open shopping mode
- Improved: Shopping list item edit page now has the camera scanner frame
- Improved: Up and down page animations
- Improved: Focus product field after unknown barcode was scanned
- Improved: Amount field in forms has a clear button which also opens keyboard
- Improved: Menu in product overview bottom sheet has a new submenu
- Improved: Updated translations
- Fixed: Swipe buttons in stock overview didn't work for last two items
- Fixed: Menu items on bottom were not clickable sometimes (#383)
- Fixed: Parent product field is locked if product is already parent product (#349)
- Fixed: Barcode chips have not cleared the barcode when removed
- Fixed: Quick mode on consume page had wrong initial state sometimes
- Fixed: Remove barcode from forms during 'clear form' action

2.0.0-alpha06
- New: Stock overview page now has list animations and offline loading
- New: 'Scan mode' is now 'Quick mode' and has a better help text (#332)
- New: Jost* typeface by Owen Earl (we hope you like it)
- New: Barcode search works on new stock overview page (#375)
- Improved: Stock information on start page
- Improved: Lock current screen orientation while camera scanner frame is visible (#358)