@@ -19,6 +19,7 @@
 - Fixed: White icons on white navigation bar with SDK 21-25 (#366)
 - Fixed: Plurals in languages with multiple plurals are displayed correctly (#348)
 - Fixed: Show opened aggregated amount in stock overview if necessary
+- Fixed: Conscrypt implementation was wrong, now it should work (#163)
 
 2.0.0-alpha07
 - New: Transfer page and inventory page (finally!) (#385 and #115)
